@@ -1621,7 +1621,7 @@ bind_instantiation:		// ==IEEE: bind_instantiation
 // different, so we copy all rules for checkers.
 
 generate_region:		// ==IEEE: generate_region
-		yGENERATE ~c~genTopBlock yENDGENERATE	{ }
+		yGENERATE ~c~genItemList yENDGENERATE	{ }
 	|	yGENERATE yENDGENERATE			{ }
 	;
 
@@ -1630,6 +1630,7 @@ c_generate_region:		// IEEE: generate_region (for checkers)
 	;
 
 generate_block:			// IEEE: generate_block
+	//			// Either a single item, or a begin-end block
 		~c~generate_item			{ }
 	|	~c~genItemBegin				{ }
 	;
@@ -1638,31 +1639,31 @@ c_generate_block:		// IEEE: generate_block (for checkers)
 		BISONPRE_COPY(generate_block,{s/~c~/c_/g})	// {copied}
 	;
 
-genTopBlock:
-		~c~genItemList				{ }
-	|	~c~genItemBegin				{ }
-	;
-
-c_genTopBlock:			// (for checkers)
-		BISONPRE_COPY(genTopBlock,{s/~c~/c_/g})		// {copied}
-	;
-
 genItemBegin:			// IEEE: part of generate_block
 		yBEGIN ~c~genItemList yEND		{ }
 	|	yBEGIN yEND				{ }
 	|	id ':' yBEGIN ~c~genItemList yEND endLabelE	{ }
-	|	id ':' yBEGIN             yEND endLabelE	{ }
+	|	id ':' yBEGIN                yEND endLabelE	{ }
 	|	yBEGIN ':' idAny ~c~genItemList yEND endLabelE	{ }
-	|	yBEGIN ':' idAny             yEND endLabelE	{ }
+	|	yBEGIN ':' idAny                yEND endLabelE	{ }
 	;
 
 c_genItemBegin:			// IEEE: part of generate_block (for checkers)
 		BISONPRE_COPY(genItemBegin,{s/~c~/c_/g})		// {copied}
 	;
 
-genItemList:
+genItemOrBegin:			// Not in IEEE, but our begin isn't under generate_item
 		~c~generate_item			{ }
-	|	~c~genItemList ~c~generate_item		{ }
+	|	~c~genItemBegin				{ }
+	;
+
+c_genItemOrBegin:		// (for checkers)
+		BISONPRE_COPY(genItemOrBegin,{s/~c~/c_/g})	// {copied}
+	;
+
+genItemList:
+		~c~genItemOrBegin			{ }
+	|	~c~genItemList ~c~genItemOrBegin	{ }
 	;
 
 c_genItemList:			// (for checkers)
