@@ -477,6 +477,12 @@ verilog/parser_bugs.v:449: COMMENT  '/* multi
 verilog/parser_bugs.v:447: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:453: MODULE  'module' 'bug422' undef '0'
 verilog/parser_bugs.v:456: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:458: MODULE  'module' 'bug461' undef '0'
+verilog/parser_bugs.v:460: VAR  'genvar' 'g' 'module' '' '' '' ''
+verilog/parser_bugs.v:460: COMMENT  '// bug461'
+verilog/parser_bugs.v:462: VAR  'genvar' 'g2' 'module' '' '' '' ''
+verilog/parser_bugs.v:463: VAR  'genvar' 'g1' 'module' '' '' '' ''
+verilog/parser_bugs.v:469: ENDMODULE  'endmodule'
 verilog/pinorder.v:001: COMMENT  '// DESCRIPTION: Verilog-Perl: Example Verilog for testing package'
 verilog/pinorder.v:002: COMMENT  '//'
 verilog/pinorder.v:003: COMMENT  '// This file ONLY is placed into the Public Domain, for any use,'
