@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix comment callback starting line, bug459. [Max Bjurling]
 
+****	Fix genvar and begin under generate, bug461.  [Alex Solomatnikov]
+
 ****	Fix cpan-testers' tests on systems without perldoc.
 
 
